--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<div>
+  <form [formGroup]="mform" (ngSubmit)="onSubmit()">
+    <div>
+      <label>Username:</label>
+      <input type="text" name="username" placeholder="Username" required formControlName="username">
+    </div>
+    <div>
+      <label>Password:</label>
+      <div>
+        <input type="password" name="password" placeholder="Password" required formControlName="password">
+      </div>
+    </div>
+    <div>
+      <button
+        [disabled]="invalid('username') || invalid('password')"
+        type="submit">Login</button>
+    </div>
+  </form>
+</div>
